Fixed size for expenses table columns (#16)
### Description of issue

Need to make column `item` be stretched

### Description of fix

- added new properties in `TableColumn`:
  - `minWidth` - minimal width for column
  - `stretch` - makes column be stretched
- made column `item` be stretched
- set min width `100px` for column `price`

--- a/src/app/components/price/price.component.scss
+++ b/src/app/components/price/price.component.scss
@@ -1,3 +1,7 @@
 .currency-name {
-    color: #00000050;
+  color: #00000050;
+}
+
+.price-container {
+  white-space: nowrap;
 }
